lib/ansible/plugins/action/copy.py: Attend to potentially failing module calls
As of right now, module_return is overwritten by subsequent _execute_module()
calls in run(), effectively resulting in masking raised exceptions thrown in
these modules.

Fixes #33785

Signed-off-by: Patrick Ringl <patrick_@freenet.de>

--- a/test/integration/targets/copy/tasks/tests.yml
+++ b/test/integration/targets/copy/tasks/tests.yml
@@ -876,6 +876,27 @@
     state: absent
 
 #
+# recursive copy with invalid directory_mode (#33785)
+#
+- name: Test recursive copy with invalid directory_mode
+  copy:
+    src: subdir
+    dest: "{{ remote_subdir }}"
+    directory_mode: bogus
+  ignore_errors: True
+  register: recursive_copy_invalid_directory_mode_result
+
+- name: Assert that the recursive copy with invalid directory_mode fails
+  assert:
+    that:
+      - "recursive_copy_invalid_directory_mode_result.failed"
+
+- name: Cleanup the recursive copy subdir
+  file:
+    name: "{{ remote_subdir }}"
+    state: absent
+
+#
 # Recursive copy of tricky symlinks
 #
 - block:
