--- a/test/integration/targets/git/tasks/depth.yml
+++ b/test/integration/targets/git/tasks/depth.yml
@@ -176,61 +176,66 @@
 # Make sure shallow fetch works when updating a branch
 #
 
-- name: create repo_dir
-  file: path={{repo_dir}} state=directory
-
-- name: prepare tmp git repo with a branch (and go back to master)
-  shell: git init; echo "1" > a; git add a; git commit -m "1"; git checkout -b test_branch; echo "2" > a; git commit -m "2 on branch" a; git checkout master;
-  args:
-    chdir: "{{repo_dir}}"
-
-- name: clone from branch with depth specified
+- name: DEPTH | clone from branch with depth specified
   git:
-    repo: "{{ repo_dir | replace('~', 'file://' + ansible_env.HOME) }}"
+    repo: 'file://{{ repo_dir|expanduser }}/shallow_branch'
     dest: '{{ checkout_dir }}'
     depth: 1
     version: test_branch
 
-- name: check if clone is shallow
+- name: DEPTH | check if clone is shallow
   stat: path={{ checkout_dir }}/.git/shallow
   register: is_shallow
-  when: git_version.stdout | version_compare("{{git_version_supporting_depth}}", '>=')
+  when: git_version.stdout is version(git_version_supporting_depth, '>=')
 
-- name: assert that clone is shallow
+- name: DEPTH | assert that clone is shallow
   assert:
     that:
       - is_shallow.stat.exists
-  when: git_version.stdout | version_compare("{{git_version_supporting_depth}}", '>=')
+  when: git_version.stdout is version(git_version_supporting_depth, '>=')
 
-- name: commit on branch in tmp repo (and go back to master)
-  shell: git checkout test_branch;echo "3" > a; git commit -m "3 on branch" a; git checkout master;
+- name: DEPTH | commit on branch in shallow_branch repo (and go back to master)
+  shell: |
+    git checkout test_branch;
+    echo "3" > a; git commit -m "3 on branch" a;
+    git checkout master;
   args:
-    chdir: "{{repo_dir}}"
+    chdir: "{{repo_dir}}/shallow_branch"
 
-- name: fetch same updated branch with depth specified
+- name: DEPTH | fetch same updated branch with depth specified
   git:
-    repo: "{{ repo_dir | replace('~', 'file://' + ansible_env.HOME ) }}"
+    repo: 'file://{{ repo_dir|expanduser }}/shallow_branch'
     dest: '{{ checkout_dir }}'
     depth: 1
     version: test_branch
   register: git_fetch
 
-- name: check if branch update arrived
+- name: DEPTH | assert if branch update arrived
   assert:
     that:
-      - git_fetch|changed
-      - "{{ lookup('file', checkout_dir+'/a') | search('3')}}"
+      - git_fetch is changed
 
-- name: check if checkout_dir is shallow
+- name: DEPTH | assert if branch update resulted in file being updated
+  lineinfile:
+    path: '{{ checkout_dir }}/a'
+    line: 3
+    state: present
+  check_mode: yes
+  register: updated_file_contents
+  failed_when: (updated_file_contents is changed) or (updated_file_contents is failed)
+
+- name: DEPTH | check if checkout_dir is shallow
   stat: path={{ checkout_dir }}/.git/shallow
   register: is_shallow
-  when: git_version.stdout | version_compare("{{git_version_supporting_depth}}", '>=')
+  when: git_version.stdout is version(git_version_supporting_depth, '>=')
 
-- name: assert that checkout_dir still is shallow
+- name: DEPTH | assert that checkout_dir still is shallow
   assert:
     that:
       - is_shallow.stat.exists
-  when: git_version.stdout | version_compare("{{git_version_supporting_depth}}", '>=')
+  when: git_version.stdout is version(git_version_supporting_depth, '>=')
 
-- name: clear checkout_dir
-  file: state=absent path={{ checkout_dir }}
+- name: DEPTH | clear checkout_dir
+  file:
+    state: absent
+    path: "{{ checkout_dir }}"
