--- a/test/integration/targets/git/tasks/setup-local-repos.yml
+++ b/test/integration/targets/git/tasks/setup-local-repos.yml
@@ -5,6 +5,7 @@
   with_items:
     - "{{ repo_dir }}/minimal"
     - "{{ repo_dir }}/shallow"
+    - "{{ repo_dir }}/shallow_branch"
 
 - name: SETUP-LOCAL-REPOS | prepare minimal git repo
   shell: git init; echo "1" > a; git add a; git commit -m "1"
@@ -24,3 +25,12 @@
   register: git_shallow_head_1
   args:
     chdir: "{{ repo_dir }}/shallow"
+
+- name: prepare tmp git repo with a branch (and go back to master)
+  shell: |
+    git init;
+    echo "1" > a; git add a; git commit -m "1";
+    git checkout -b test_branch; echo "2" > a; git commit -m "2 on branch" a;
+    git checkout master;
+  args:
+    chdir: "{{ repo_dir }}/shallow_branch"
