--- a/test/integration/targets/aci_aaa_user/tasks/main.yml
+++ b/test/integration/targets/aci_aaa_user/tasks/main.yml
@@ -32,7 +32,6 @@
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
     aaa_user: ansible
-    aaa_password: 12!Ab:cD!34
     description: Ansible test user
     email: ansible@ansible.lan
     enabled: yes
@@ -44,10 +43,11 @@
   check_mode: yes
   register: cm_add_user
 
+# NOTE: Setting password is not idempotent, see #35544
 - name: Add user (normal mode)
   aci_aaa_user:
     <<: *user_present
-    aaa_password: '{{ aci_password }}'
+    aaa_password: 12!Ab:cD!34
   register: nm_add_user
 
 - name: Add user again (check mode)
@@ -76,15 +76,16 @@
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
     aaa_user: ansible
+    description: Ansible test user for integration tests
+    email: aci-ansible@ansible.lan
+#    expiration: 2123-12-12
+#    expires: yes
+    phone: 2-345-555-678
   check_mode: yes
-  register: cm_change_user
+  register: cm_modify_user
 
 - name: Modify user (normal mode)
-  aci_aaa_user:
-    <<: *user_changed
-    description: Ansible test user for integration tests
-    expiration: 2123-12-12
-    expires: yes
+  aci_aaa_user: *user_changed
   register: nm_modify_user
 
 - name: Modify user again (check mode)
