Added ugly workaround for systemd for Ubuntu 16.04

--- a/test/integration/targets/setup_rabbitmq/tasks/main.yml
+++ b/test/integration/targets/setup_rabbitmq/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 
-- include: setup.yml
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'trusty'
+- include: ubuntu.yml
+  when: ansible_distribution == 'Ubuntu'
