--- a/test/integration/targets/rabbitmq_user/tasks/main.yml
+++ b/test/integration/targets/rabbitmq_user/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 
 - include: tests.yml
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'trusty'
+  when: ansible_distribution == 'Ubuntu'
