--- a/test/integration/targets/git/tasks/setup-local-repos.yml
+++ b/test/integration/targets/git/tasks/setup-local-repos.yml
@@ -5,7 +5,7 @@
   with_items:
     - "{{ repo_dir }}/minimal"
     - "{{ repo_dir }}/shallow"
-    - "{{ repo_dir }}/shallow_branch"
+    - "{{ repo_dir }}/shallow_branches"
 
 - name: SETUP-LOCAL-REPOS | prepare minimal git repo
   shell: git init; echo "1" > a; git add a; git commit -m "1"
@@ -26,11 +26,11 @@
   args:
     chdir: "{{ repo_dir }}/shallow"
 
-- name: prepare tmp git repo with a branch (and go back to master)
+- name: prepare tmp git repo with two branches
   shell: |
-    git init;
-    echo "1" > a; git add a; git commit -m "1";
-    git checkout -b test_branch; echo "2" > a; git commit -m "2 on branch" a;
-    git checkout master;
+    git init
+    echo "1" > a; git add a; git commit -m "1"
+    git checkout -b test_branch; echo "2" > a; git commit -m "2 on branch" a
+    git checkout -b new_branch; echo "3" > a; git commit -m "3 on new branch" a
   args:
-    chdir: "{{ repo_dir }}/shallow_branch"
+    chdir: "{{ repo_dir }}/shallow_branches"
