--- a/test/integration/targets/ios_user/tests/cli/basic.yaml
+++ b/test/integration/targets/ios_user/tests/cli/basic.yaml
@@ -79,6 +79,6 @@
 - assert:
     that:
       - 'result.changed == true'
-      - '"no username ansibletest1" in result.commands[0]'
-      - '"no username ansibletest2" in result.commands[1]'
-      - '"no username ansibletest3" in result.commands[2]'
+      - '"no username ansibletest1" in result.commands[0]["command"]'
+      - '"no username ansibletest2" in result.commands[1]["command"]'
+      - '"no username ansibletest3" in result.commands[2]["command"]'
