Better describe ANSIBLE_PRIVATE_ROLE_VARS

--- a/lib/ansible/config/base.yml
+++ b/lib/ansible/config/base.yml
@@ -843,7 +843,9 @@ DEFAULT_PRIVATE_ROLE_VARS:
   name: Private role variables
   default: False
   description:
-    - Makes role variables inaccessible from other roles (and the role that own the variables if replayed).
+    - Makes role variables inaccessible from other roles.
+    - This was introduced as a way to reset role variables to default values if
+      a role is used more than once in a playbook.
   env: [{name: ANSIBLE_PRIVATE_ROLE_VARS}]
   ini:
   - {key: private_role_vars, section: defaults}
