--- a/test/integration/targets/nxos_bgp/tests/common/sanity.yaml
+++ b/test/integration/targets/nxos_bgp/tests/common/sanity.yaml
@@ -4,13 +4,13 @@
   when: ansible_connection == "local"
 
 - set_fact: neighbor_down_fib_accelerate="true"
-  when: (not titanium) and (imagetag and ((imagetag | version_compare('N1', 'ne')) and (imagetag | version_compare('D1', 'ne'))))
+  when: (not titanium) and ((imagetag != 'N1') and (imagetag != 'D1'))
 
 - set_fact: reconnect_interval="55"
-  when: (not titanium) and (imagetag and ((imagetag | version_compare('N1', 'ne')) and (imagetag | version_compare('D1', 'ne'))))
+  when: (not titanium) and ((imagetag != 'N1') and (imagetag != 'D1'))
 
 - set_fact: isolate="false"
-  when: not (platform | match("N35"))
+  when: platform is not match("N35")
 
 - name: "Enable feature BGP"
   nxos_feature:
