--- a/test/integration/targets/nxos_nxapi/tests/cli/configure.yaml
+++ b/test/integration/targets/nxos_nxapi/tests/cli/configure.yaml
@@ -28,7 +28,7 @@
   when: platform is match('N7K')
 
 - include: targets/nxos_nxapi/tasks/platform/n5k/assert_changes.yaml
-  when: platform | match('N5K')
+  when: platform is match('N5K')
 
 - include: targets/nxos_nxapi/tasks/platform/default/assert_changes.yaml
   when: not ( platform is search('N7K')) and not (platform is search('N5K')) and not (platform is search('N35'))
