Followup to docs refactor pull request #36067 - fixes gitignore and cleanup in makefile; removes some generated files; moves a straggler to the appropriate subdirectory.

--- a/docs/docsite/Makefile
+++ b/docs/docsite/Makefile
@@ -69,6 +69,8 @@ clean:
 	-rm rst/config.rst
 	-rm rst/ansible-*.rst
 	-rm rst/ansible.rst
+	-rm rst/reference_appendices/config.rst
+	-rm rst/reference_appendices/playbooks_keywords.rst
 
 .PHONEY: docs clean
 
